mime headers now done

--- a/test/read/hdr_qp0.in
+++ b/test/read/hdr_qp0.in
@@ -5,4 +5,4 @@ Subject: nada =?utf-8?z?Just_=A35!?= here either
 Subject: empty =?iso-8859-1?q??=
 Subject: two =?iso-8859-1?q?sep=61rate?= =?utf-8?q?pi=65ces?= of qp
 
-body
+this is the body
